--- a/crear-blog-rentable.html
+++ b/crear-blog-rentable.html
@@ -1,43 +1,91 @@
 <!DOCTYPE html>
 <html lang="es">
 <head>
-<meta charset="UTF-8">
-<title>Cómo crear un blog rentable paso a paso</title>
-<meta name="description" content="Aprende cómo crear un blog rentable desde cero y ganar dinero con Google AdSense, afiliados y contenido de valor.">
+  <meta charset="UTF-8" />
+  <title>Cómo crear un blog rentable | Libertad Financiera</title>
+  <meta name="description" content="Guía rápida para crear un blog rentable: temática, contenido, SEO y monetización con AdSense y afiliados." />
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
+
+  <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-9161620238567586"
+    crossorigin="anonymous"></script>
+
+  <style>
+    :root{--nav:#0a2540;--bg:#f4f6f8;--text:#0b1220;--muted:#4b5563;--card:#fff;--radius:14px;--shadow:0 10px 25px rgba(10,37,64,.08)}
+    *{box-sizing:border-box}
+    body{font-family:Arial,sans-serif;background:var(--bg);margin:0;color:var(--text);line-height:1.75}
+    header{background:var(--nav);color:#fff;padding:44px 20px;text-align:center}
+    header h1{margin:0 0 6px;font-size:40px}
+    .nav{margin-top:14px}
+    .nav a{color:#fff;margin:0 10px;text-decoration:none;font-weight:600;opacity:.95}
+    .nav a:hover{opacity:1;text-decoration:underline}
+    main{max-width:980px;margin:28px auto;padding:0 16px}
+    .card{background:var(--card);border-radius:var(--radius);box-shadow:var(--shadow);padding:34px 22px}
+    h2{margin:22px 0 8px;font-size:24px}
+    p{margin:10px 0}
+    ul{margin:10px 0 0 18px}
+    li{margin:6px 0}
+    .muted{color:var(--muted)}
+    footer{background:var(--nav);color:#fff;text-align:center;padding:18px 16px;margin-top:26px}
+    footer a{color:#fff;text-decoration:none;font-weight:700}
+    footer a:hover{text-decoration:underline}
+    .sep{opacity:.55;margin:0 8px}
+    @media (max-width:850px){header h1{font-size:34px}}
+  </style>
 </head>
-<body style="font-family: Arial, sans-serif; max-width: 900px; margin: 40px auto; line-height: 1.6;">
 
-<h1>Cómo crear un blog rentable paso a paso</h1>
+<body>
+  <header>
+    <h1>Libertad Financiera</h1>
+    <p class="nav">
+      <a href="index.html">Inicio</a>
+      <a href="ganar-dinero-internet.html">Ganar dinero</a>
+      <a href="ingresos-pasivos.html">Ingresos pasivos</a>
+      <a href="que-es-adsense.html">AdSense</a>
+    </p>
+  </header>
 
-<p>Crear un blog rentable es una de las mejores formas de generar ingresos pasivos por Internet. No necesitas ser experto ni tener mucho dinero, solo constancia y una buena estrategia.</p>
+  <main>
+    <section class="card">
+      <h2>Cómo crear un blog rentable</h2>
+      <p class="muted">Un blog rentable se construye con paciencia: contenido útil + SEO + monetización.</p>
 
-<h2>¿Qué es un blog rentable?</h2>
-<p>Un blog rentable es una página web que publica contenido útil para las personas y gana dinero gracias a anuncios, afiliados o productos propios.</p>
+      <h2>1) Elige una temática con demanda</h2>
+      <ul>
+        <li>Finanzas personales</li>
+        <li>Trabajo y freelancing</li>
+        <li>Tecnología y guías</li>
+        <li>Salud/fitness (con cuidado y fuentes)</li>
+      </ul>
 
-<p>Cuando muchas personas visitan tu blog desde Google, puedes monetizar ese tráfico de forma automática.</p>
+      <h2>2) Publica contenido que responda preguntas</h2>
+      <p>Escribe artículos que la gente busca en Google (ej: “cómo ahorrar”, “cómo empezar con AdSense”, etc.).</p>
 
-<h2>Pasos para crear un blog que gane dinero</h2>
+      <h2>3) SEO básico</h2>
+      <ul>
+        <li>Un título claro (H1)</li>
+        <li>Subtítulos (H2) y listas</li>
+        <li>Descripción (meta description)</li>
+        <li>Enlaces internos entre tus artículos</li>
+      </ul>
 
-<h3>1. Elegir un tema que tenga búsquedas</h3>
-<p>Los mejores temas son aquellos donde la gente busca soluciones: dinero, salud, trabajo, tecnología, viajes, etc.</p>
+      <h2>4) Monetización</h2>
+      <ul>
+        <li>AdSense (anuncios)</li>
+        <li>Afiliados (comisiones)</li>
+        <li>Productos digitales (ebooks, cursos)</li>
+      </ul>
 
-<h3>2. Crear contenido útil</h3>
-<p>Debes escribir artículos que respondan preguntas reales como “cómo ganar dinero”, “cómo ahorrar”, “cómo invertir”, etc.</p>
+      <p class="muted">Consejo: empieza con 10 artículos buenos. Luego mejoras diseño y SEO.</p>
+    </section>
+  </main>
 
-<h3>3. Publicar varias páginas</h3>
-<p>Google confía más en una web que tiene muchas páginas útiles. Cuantos más artículos publiques, más visitas puedes recibir.</p>
-
-<h3>4. Monetizar con Google AdSense</h3>
-<p>Cuando Google aprueba tu web, empiezas a mostrar anuncios. Cada visita y cada clic genera ingresos.</p>
-
-<h2>¿Cuánto dinero se puede ganar?</h2>
-<p>Un blog pequeño puede generar unos pocos euros al mes, pero una web con miles de visitas diarias puede generar cientos o incluso miles de euros al mes.</p>
-
-<h2>Conclusión</h2>
-<p>Un blog es un negocio digital. Si publicas contenido de calidad y eres constante, con el tiempo Google te enviará visitas gratis y tu web empezará a generar ingresos automáticos.</p>
-
-<hr>
-<p><a href="index.html">Volver a la página principal</a></p>
-
+  <footer>
+    <p>
+      <a href="privacidad.html">Privacidad</a><span class="sep">|</span>
+      <a href="cookies.html">Cookies</a><span class="sep">|</span>
+      <a href="aviso-legal.html">Aviso legal</a>
+    </p>
+    <p>© 2025 Libertad Financiera</p>
+  </footer>
 </body>
 </html>
