--- a/crear-web-para-ganar-dinero.html
+++ b/crear-web-para-ganar-dinero.html
@@ -1,23 +1,92 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="es">
 <head>
-<meta charset="utf-8">
-<title>Cómo crear una web para ganar dinero</title>
-<meta name="description" content="Cómo crear una página web para generar ingresos pasivos.">
+  <meta charset="UTF-8" />
+  <title>Crear una web para ganar dinero | Libertad Financiera</title>
+  <meta name="description" content="Cómo crear una web que genere ingresos: contenido, SEO, estructura y monetización con AdSense y afiliados." />
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
+
+  <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-9161620238567586"
+    crossorigin="anonymous"></script>
+
+  <style>
+    :root{--nav:#0a2540;--bg:#f4f6f8;--text:#0b1220;--muted:#4b5563;--card:#fff;--radius:14px;--shadow:0 10px 25px rgba(10,37,64,.08)}
+    *{box-sizing:border-box}
+    body{font-family:Arial,sans-serif;background:var(--bg);margin:0;color:var(--text);line-height:1.75}
+    header{background:var(--nav);color:#fff;padding:44px 20px;text-align:center}
+    header h1{margin:0 0 6px;font-size:40px}
+    .nav{margin-top:14px}
+    .nav a{color:#fff;margin:0 10px;text-decoration:none;font-weight:600;opacity:.95}
+    .nav a:hover{opacity:1;text-decoration:underline}
+    main{max-width:980px;margin:28px auto;padding:0 16px}
+    .card{background:var(--card);border-radius:var(--radius);box-shadow:var(--shadow);padding:34px 22px}
+    h2{margin:22px 0 8px;font-size:24px}
+    p{margin:10px 0}
+    ul{margin:10px 0 0 18px}
+    li{margin:6px 0}
+    .muted{color:var(--muted)}
+    footer{background:var(--nav);color:#fff;text-align:center;padding:18px 16px;margin-top:26px}
+    footer a{color:#fff;text-decoration:none;font-weight:700}
+    footer a:hover{text-decoration:underline}
+    .sep{opacity:.55;margin:0 8px}
+    @media (max-width:850px){header h1{font-size:34px}}
+  </style>
 </head>
+
 <body>
-<h1>Cómo crear una web para ganar dinero</h1>
+  <header>
+    <h1>Libertad Financiera</h1>
+    <p class="nav">
+      <a href="index.html">Inicio</a>
+      <a href="ganar-dinero-internet.html">Ganar dinero</a>
+      <a href="ingresos-pasivos.html">Ingresos pasivos</a>
+      <a href="que-es-adsense.html">AdSense</a>
+    </p>
+  </header>
 
-<p>Hoy cualquiera puede crear una web sin saber programación.</p>
+  <main>
+    <section class="card">
+      <h2>Crear una web para ganar dinero</h2>
+      <p class="muted">
+        Una web puede generar ingresos con anuncios (AdSense), afiliados o productos digitales. La clave es el tráfico desde Google.
+      </p>
 
-<h2>Qué necesitas</h2>
-<ul>
-<li>Una web publicada</li>
-<li>Contenido útil</li>
-<li>Google AdSense</li>
-</ul>
+      <h2>1) Estructura mínima</h2>
+      <ul>
+        <li>Inicio (resumen + enlaces a artículos)</li>
+        <li>3–10 artículos iniciales (respondiendo búsquedas)</li>
+        <li>Páginas legales: privacidad, cookies y aviso legal</li>
+      </ul>
 
-<h2>Cómo funciona el sistema</h2>
-<p>Publicas artículos que la gente busca en Google. Esas personas entran a tu web y los anuncios generan ingresos.</p>
+      <h2>2) Publica contenido útil</h2>
+      <p>Haz artículos que resuelvan un problema: guías, listas, tutoriales, comparativas y pasos.</p>
+
+      <h2>3) SEO (lo básico que más importa)</h2>
+      <ul>
+        <li>Un H1 claro y un título con intención</li>
+        <li>Subtítulos (H2) para ordenar</li>
+        <li>Meta descripción</li>
+        <li>Enlaces internos entre artículos</li>
+      </ul>
+
+      <h2>4) Monetización</h2>
+      <ul>
+        <li>AdSense: anuncios automáticos cuando te aprueben</li>
+        <li>Afiliados: comisiones por recomendar</li>
+        <li>Productos: ebooks, plantillas, cursos</li>
+      </ul>
+
+      <p class="muted">Consejo: primero contenido. Luego diseño y optimización.</p>
+    </section>
+  </main>
+
+  <footer>
+    <p>
+      <a href="privacidad.html">Privacidad</a><span class="sep">|</span>
+      <a href="cookies.html">Cookies</a><span class="sep">|</span>
+      <a href="aviso-legal.html">Aviso legal</a>
+    </p>
+    <p>© 2025 Libertad Financiera</p>
+  </footer>
 </body>
 </html>
