--- a/privacidad.html
+++ b/privacidad.html
@@ -1,23 +1,76 @@
 <!DOCTYPE html>
 <html lang="es">
 <head>
-<meta charset="UTF-8">
-<title>Política de privacidad</title>
+  <meta charset="UTF-8" />
+  <title>Política de privacidad | Libertad Financiera</title>
+  <meta name="description" content="Política de privacidad de Libertad Financiera." />
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
+
+  <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-9161620238567586"
+    crossorigin="anonymous"></script>
+
+  <style>
+    :root{--nav:#0a2540;--bg:#f4f6f8;--text:#0b1220;--muted:#4b5563;--card:#fff;--radius:14px;--shadow:0 10px 25px rgba(10,37,64,.08)}
+    *{box-sizing:border-box}
+    body{font-family:Arial,sans-serif;background:var(--bg);margin:0;color:var(--text);line-height:1.75}
+    header{background:var(--nav);color:#fff;padding:44px 20px;text-align:center}
+    header h1{margin:0 0 6px;font-size:40px}
+    .nav{margin-top:14px}
+    .nav a{color:#fff;margin:0 10px;text-decoration:none;font-weight:600;opacity:.95}
+    .nav a:hover{opacity:1;text-decoration:underline}
+    main{max-width:980px;margin:28px auto;padding:0 16px}
+    .card{background:var(--card);border-radius:var(--radius);box-shadow:var(--shadow);padding:34px 22px}
+    h2{margin:22px 0 8px;font-size:24px}
+    p{margin:10px 0}
+    .muted{color:var(--muted)}
+    footer{background:var(--nav);color:#fff;text-align:center;padding:18px 16px;margin-top:26px}
+    footer a{color:#fff;text-decoration:none;font-weight:700}
+    footer a:hover{text-decoration:underline}
+    .sep{opacity:.55;margin:0 8px}
+    @media (max-width:850px){header h1{font-size:34px}}
+  </style>
 </head>
-<body style="max-width:900px;margin:40px auto;font-family:Arial">
-<h1>Política de privacidad</h1>
 
-<p>En Libertad Financiera respetamos y protegemos la privacidad de los usuarios.</p>
+<body>
+  <header>
+    <h1>Libertad Financiera</h1>
+    <p class="nav">
+      <a href="index.html">Inicio</a>
+      <a href="ganar-dinero-internet.html">Ganar dinero</a>
+      <a href="ingresos-pasivos.html">Ingresos pasivos</a>
+      <a href="que-es-adsense.html">AdSense</a>
+    </p>
+  </header>
 
-<p>Este sitio web puede recopilar datos como dirección IP, ubicación aproximada, tipo de navegador y páginas visitadas a través de herramientas como Google Analytics y Google AdSense.</p>
+  <main>
+    <section class="card">
+      <h2>Política de privacidad</h2>
+      <p class="muted">Última actualización: 2025</p>
 
-<p>Estos datos se usan únicamente con fines estadísticos y publicitarios.</p>
+      <h2>1. Responsable</h2>
+      <p>Este sitio web es “Libertad Financiera”.</p>
 
-<p>Google puede utilizar cookies para mostrar anuncios personalizados.</p>
+      <h2>2. Datos que se recogen</h2>
+      <p>Este sitio no solicita registro. Puede recopilar datos técnicos de navegación (por ejemplo IP y navegador) a través de herramientas de análisis o publicidad.</p>
 
-<p>El usuario puede desactivar la publicidad personalizada desde su cuenta de Google.</p>
+      <h2>3. Publicidad (Google AdSense)</h2>
+      <p>Este sitio puede mostrar anuncios de Google. Google puede usar cookies para personalizar la publicidad según tus visitas.</p>
 
-<p>Si tienes dudas puedes contactar a través de este sitio web.</p>
+      <h2>4. Tus derechos</h2>
+      <p>Puedes configurar o bloquear cookies desde tu navegador y revisar la configuración de anuncios de Google.</p>
 
+      <h2>5. Contacto</h2>
+      <p>Si necesitas contactar, añade un email aquí cuando lo tengas listo.</p>
+    </section>
+  </main>
+
+  <footer>
+    <p>
+      <a href="privacidad.html">Privacidad</a><span class="sep">|</span>
+      <a href="cookies.html">Cookies</a><span class="sep">|</span>
+      <a href="aviso-legal.html">Aviso legal</a>
+    </p>
+    <p>© 2025 Libertad Financiera</p>
+  </footer>
 </body>
 </html>
