--- a/cookies.html
+++ b/cookies.html
@@ -1,29 +1,77 @@
 <!DOCTYPE html>
 <html lang="es">
 <head>
-<meta charset="UTF-8">
-<title>Política de Cookies - Libertad Financiera</title>
+  <meta charset="UTF-8" />
+  <title>Política de cookies | Libertad Financiera</title>
+  <meta name="description" content="Política de cookies de Libertad Financiera." />
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
+
+  <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-9161620238567586"
+    crossorigin="anonymous"></script>
+
+  <style>
+    :root{--nav:#0a2540;--bg:#f4f6f8;--text:#0b1220;--muted:#4b5563;--card:#fff;--radius:14px;--shadow:0 10px 25px rgba(10,37,64,.08)}
+    *{box-sizing:border-box}
+    body{font-family:Arial,sans-serif;background:var(--bg);margin:0;color:var(--text);line-height:1.75}
+    header{background:var(--nav);color:#fff;padding:44px 20px;text-align:center}
+    header h1{margin:0 0 6px;font-size:40px}
+    .nav{margin-top:14px}
+    .nav a{color:#fff;margin:0 10px;text-decoration:none;font-weight:600;opacity:.95}
+    .nav a:hover{opacity:1;text-decoration:underline}
+    main{max-width:980px;margin:28px auto;padding:0 16px}
+    .card{background:var(--card);border-radius:var(--radius);box-shadow:var(--shadow);padding:34px 22px}
+    h2{margin:22px 0 8px;font-size:24px}
+    p{margin:10px 0}
+    ul{margin:10px 0 0 18px}
+    li{margin:6px 0}
+    .muted{color:var(--muted)}
+    footer{background:var(--nav);color:#fff;text-align:center;padding:18px 16px;margin-top:26px}
+    footer a{color:#fff;text-decoration:none;font-weight:700}
+    footer a:hover{text-decoration:underline}
+    .sep{opacity:.55;margin:0 8px}
+    @media (max-width:850px){header h1{font-size:34px}}
+  </style>
 </head>
-<body style="font-family: Arial; max-width:800px; margin:40px auto;">
 
-<h1>Política de Cookies</h1>
+<body>
+  <header>
+    <h1>Libertad Financiera</h1>
+    <p class="nav">
+      <a href="index.html">Inicio</a>
+      <a href="ganar-dinero-internet.html">Ganar dinero</a>
+      <a href="ingresos-pasivos.html">Ingresos pasivos</a>
+      <a href="que-es-adsense.html">AdSense</a>
+    </p>
+  </header>
 
-<p>Este sitio web utiliza cookies propias y de terceros para mejorar la experiencia del usuario y mostrar publicidad.</p>
+  <main>
+    <section class="card">
+      <h2>Política de cookies</h2>
+      <p class="muted">Última actualización: 2025</p>
 
-<h2>¿Qué son las cookies?</h2>
-<p>Las cookies son pequeños archivos que se almacenan en tu navegador cuando visitas una página web.</p>
+      <h2>¿Qué son las cookies?</h2>
+      <p>Las cookies son pequeños archivos que se guardan en tu navegador para recordar información y mejorar tu experiencia.</p>
 
-<h2>Cookies que puede usar este sitio</h2>
-<ul>
-  <li><strong>Cookies técnicas:</strong> necesarias para el funcionamiento básico.</li>
-  <li><strong>Cookies de analítica:</strong> para conocer visitas y comportamiento (por ejemplo, Google Analytics).</li>
-  <li><strong>Cookies de publicidad:</strong> para mostrar anuncios relevantes (por ejemplo, Google AdSense).</li>
-</ul>
+      <h2>Cookies que puede usar este sitio</h2>
+      <ul>
+        <li><b>Cookies técnicas</b> (necesarias para el funcionamiento básico)</li>
+        <li><b>Cookies de publicidad</b> (por ejemplo Google AdSense)</li>
+      </ul>
 
-<h2>Cómo gestionar o desactivar cookies</h2>
-<p>Puedes permitir, bloquear o eliminar cookies desde la configuración de tu navegador.</p>
+      <h2>Cómo desactivarlas</h2>
+      <p>Puedes bloquear o borrar cookies desde la configuración de tu navegador.</p>
 
-<p>Al continuar navegando en este sitio, aceptas el uso de cookies.</p>
+      <p class="muted">Nota: desactivar cookies puede afectar al funcionamiento o a la personalización de anuncios.</p>
+    </section>
+  </main>
 
+  <footer>
+    <p>
+      <a href="privacidad.html">Privacidad</a><span class="sep">|</span>
+      <a href="cookies.html">Cookies</a><span class="sep">|</span>
+      <a href="aviso-legal.html">Aviso legal</a>
+    </p>
+    <p>© 2025 Libertad Financiera</p>
+  </footer>
 </body>
 </html>
