--- a/aviso-legal.html
+++ b/aviso-legal.html
@@ -1,24 +1,73 @@
 <!DOCTYPE html>
 <html lang="es">
 <head>
-<meta charset="UTF-8">
-<title>Aviso Legal - Libertad Financiera</title>
+  <meta charset="UTF-8" />
+  <title>Aviso legal | Libertad Financiera</title>
+  <meta name="description" content="Aviso legal de Libertad Financiera." />
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
+
+  <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-9161620238567586"
+    crossorigin="anonymous"></script>
+
+  <style>
+    :root{--nav:#0a2540;--bg:#f4f6f8;--text:#0b1220;--muted:#4b5563;--card:#fff;--radius:14px;--shadow:0 10px 25px rgba(10,37,64,.08)}
+    *{box-sizing:border-box}
+    body{font-family:Arial,sans-serif;background:var(--bg);margin:0;color:var(--text);line-height:1.75}
+    header{background:var(--nav);color:#fff;padding:44px 20px;text-align:center}
+    header h1{margin:0 0 6px;font-size:40px}
+    .nav{margin-top:14px}
+    .nav a{color:#fff;margin:0 10px;text-decoration:none;font-weight:600;opacity:.95}
+    .nav a:hover{opacity:1;text-decoration:underline}
+    main{max-width:980px;margin:28px auto;padding:0 16px}
+    .card{background:var(--card);border-radius:var(--radius);box-shadow:var(--shadow);padding:34px 22px}
+    h2{margin:22px 0 8px;font-size:24px}
+    p{margin:10px 0}
+    .muted{color:var(--muted)}
+    footer{background:var(--nav);color:#fff;text-align:center;padding:18px 16px;margin-top:26px}
+    footer a{color:#fff;text-decoration:none;font-weight:700}
+    footer a:hover{text-decoration:underline}
+    .sep{opacity:.55;margin:0 8px}
+    @media (max-width:850px){header h1{font-size:34px}}
+  </style>
 </head>
-<body style="font-family: Arial; max-width:800px; margin:40px auto;">
 
-<h1>Aviso Legal</h1>
+<body>
+  <header>
+    <h1>Libertad Financiera</h1>
+    <p class="nav">
+      <a href="index.html">Inicio</a>
+      <a href="ganar-dinero-internet.html">Ganar dinero</a>
+      <a href="ingresos-pasivos.html">Ingresos pasivos</a>
+      <a href="que-es-adsense.html">AdSense</a>
+    </p>
+  </header>
 
-<p>Este sitio web pertenece a Libertad Financiera.</p>
+  <main>
+    <section class="card">
+      <h2>Aviso legal</h2>
+      <p class="muted">Última actualización: 2025</p>
 
-<p>El acceso y uso de este sitio web atribuye la condición de usuario e implica la aceptación de los términos de este aviso legal.</p>
+      <h2>1. Información general</h2>
+      <p>Este sitio web ofrece contenido informativo sobre finanzas e ingresos online.</p>
 
-<p>El propietario no se hace responsable del mal uso de la información contenida en esta web ni de los daños derivados del uso de la misma.</p>
+      <h2>2. Responsabilidad</h2>
+      <p>La información publicada es orientativa. No constituye asesoramiento financiero, legal o fiscal.</p>
 
-<p>El contenido de esta web tiene fines informativos y educativos sobre finanzas personales e ingresos online.</p>
+      <h2>3. Enlaces externos</h2>
+      <p>Este sitio puede enlazar a páginas de terceros. No nos hacemos responsables del contenido externo.</p>
 
-<p>Todos los contenidos están protegidos por derechos de autor.</p>
+      <h2>4. Propiedad intelectual</h2>
+      <p>El contenido (textos y diseño) pertenece a sus autores. No se permite la copia íntegra sin permiso.</p>
+    </section>
+  </main>
 
-<p>Contacto: info@libertadfinanciera.com</p>
-
+  <footer>
+    <p>
+      <a href="privacidad.html">Privacidad</a><span class="sep">|</span>
+      <a href="cookies.html">Cookies</a><span class="sep">|</span>
+      <a href="aviso-legal.html">Aviso legal</a>
+    </p>
+    <p>© 2025 Libertad Financiera</p>
+  </footer>
 </body>
 </html>
